remove DU from section profile entity
